--- a/games/2048/styles/components/tiles.scss
+++ b/games/2048/styles/components/tiles.scss
@@ -26,69 +26,69 @@
         }
 
         &.column-2 {
-            transform: translate(0, $column-2-left);
+            transform: translate($column-2-left, 0);
         }
 
         &.column-3 {
-            transform: translate(0, $column-3-left);
+            transform: translate($column-3-left, 0);
         }
 
         &.column-4 {
-            transform: translate(0, $column-4-left);
+            transform: translate($column-4-left, 0);
         }
     }
 
     .row-2 {
         &.column-1 {
-            transform: translate($row-2-top, 0);
+            transform: translate(0, $row-2-top);
         }
 
         &.column-2 {
-            transform: translate($row-2-top, $column-2-left);
+            transform: translate($column-2-left, $row-2-top);
         }
 
         &.column-3 {
-            transform: translate($row-2-top, $column-3-left);
+            transform: translate($column-3-left, $row-2-top);
         }
 
         &.column-4 {
-            transform: translate($row-2-top, $column-4-left);
+            transform: translate($column-4-left, $row-2-top);
         }
     }
 
     .row-3 {
         &.column-1 {
-            transform: translate($row-3-top, 0);
+            transform: translate(0, $row-3-top);
         }
 
         &.column-2 {
-            transform: translate($row-3-top, $column-2-left);
+            transform: translate($column-2-left, $row-3-top);
         }
 
         &.column-3 {
-            transform: translate($row-3-top, $column-3-left);
+            transform: translate($column-3-left, $row-3-top);
         }
 
         &.column-4 {
-            transform: translate($row-3-top, $column-4-left);
+            transform: translate($column-4-left, $row-3-top);
         }
     }
 
     .row-4 {
         &.column-1 {
-            transform: translate($row-4-top, 0);
+            transform: translate(0, $row-4-top);
         }
 
         &.column-2 {
-            transform: translate($row-4-top, $column-2-left);
+            transform: translate($column-2-left, $row-4-top);
         }
 
         &.column-3 {
-            transform: translate($row-4-top, $column-3-left);
+            transform: translate($column-3-left, $row-4-top);
         }
 
         &.column-4 {
-            transform: translate($row-4-top, $column-4-left);
+            transform: translate($column-4-left, $row-4-top);
         }
     }
 }
