--- a/games/2048/styles/common/_colors.scss
+++ b/games/2048/styles/common/_colors.scss
@@ -1,4 +1,10 @@
 $brand-color: #776e65;
 
 $tile-color: #eee4da;
+$tile-light-color: #f9f6f2;
+
 $tile-4-color: #ede0c8;
+$tile-8-color: #f2b179;
+$tile-16-color: #f59563;
+$tile-32-color: #f67c5f;
+$tile-64-color: #f65e3b;
