--- a/games/2048/styles/components/tiles.scss
+++ b/games/2048/styles/components/tiles.scss
@@ -22,7 +22,13 @@
         &.tile-8,
         &.tile-16,
         &.tile-32,
-        &.tile-64 {
+        &.tile-64,
+        &.tile-128,
+        &.tile-256,
+        &.tile-512,
+        &.tile-1024,
+        &.tile-2048,
+        &.tile-super {
             color: $tile-light-color;
         }
 
@@ -40,6 +46,30 @@
 
         &.tile-64 {
             background-color: $tile-64-color;
+        }
+
+        &.tile-128 {
+            background-color: $tile-128-color;
+        }
+
+        &.tile-256 {
+            background-color: $tile-256-color;
+        }
+
+        &.tile-512 {
+            background-color: $tile-512-color;
+        }
+
+        &.tile-1024 {
+            background-color: $tile-1024-color;
+        }
+
+        &.tile-2048 {
+            background-color: $tile-2048-color;
+        }
+
+        &.tile-super {
+            background-color: $tile-super-color;
         }
     }
 
