--- a/games/2048/styles/common/_variables.scss
+++ b/games/2048/styles/common/_variables.scss
@@ -6,6 +6,7 @@ $score-font-size: 32px;
 
 // TILES
 $tile-font-size: 55px;
+$tile-font-size--smaller: 40px;
 
 $row-2-top: (1 * $cell-size) + (1 * $gutter-size);
 $row-3-top: (2 * $cell-size) + (2 * $gutter-size);
