--- a/games/2048/styles/components/tiles.scss
+++ b/games/2048/styles/components/tiles.scss
@@ -32,6 +32,15 @@
             color: $tile-light-color;
         }
 
+        &.tile-128,
+        &.tile-256,
+        &.tile-512,
+        &.tile-1024,
+        &.tile-2048,
+        &.tile-super {
+            font-size: $tile-font-size--smaller;
+        }
+
         &.tile-8 {
             background-color: $tile-8-color;
         }
