add elements styles

--- a/games/2048/styles/common/_variables.scss
+++ b/games/2048/styles/common/_variables.scss
@@ -4,6 +4,8 @@ $cell-size: 100px;
 $board-size: (4 * $cell-size) + (5 * $gutter-size);
 $score-font-size: 32px;
 
+$font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+
 // TILES
 $tile-font-size: 55px;
 $tile-font-size--smaller: 40px;
