--- a/games/2048/styles/common/_colors.scss
+++ b/games/2048/styles/common/_colors.scss
@@ -2,7 +2,9 @@ $brand-color:           #776e65;
 
 $tile-color:            #eee4da;
 $tile-light-color:      #f9f6f2;
-$light-text-color:      $tile-color;
+$light-text-color:      $tile-light-color;
+
+$cat-color:             #f2b179;
 
 $tile-4-color:          #ede0c8;
 $tile-8-color:          #f2b179;
