--- a/games/2048/styles/common/_elements.scss
+++ b/games/2048/styles/common/_elements.scss
@@ -1,3 +1,4 @@
+@import './colors';
 @import './variables';
 
 body {
@@ -8,4 +9,19 @@ button {
     border: 0;
     background: none;
     font: inherit;
+    cursor: pointer;
+}
+
+.button {
+    border-radius: $border-radius;
+    border: 1px solid $brand-color;
+    color: $brand-color;
+    padding: $gutter-size;
+    transition: all .4s ease;
+
+    &:hover {
+        background-color: $cat-color;
+        border-color: $cat-color;
+        color: $light-text-color;
+    }
 }
