add max score to the board

--- a/games/2048/styles/components/score.scss
+++ b/games/2048/styles/components/score.scss
@@ -8,6 +8,7 @@
     color: $light-text-color;
     border-radius: $border-radius * 2;
     text-align: center;
+    margin-left: $gutter-size * 2;
 
     .value {
         font-size: $score-font-size;
