--- a/games/2048/styles/components/tiles.scss
+++ b/games/2048/styles/components/tiles.scss
@@ -13,6 +13,7 @@
         background-color: $tile-color;
         display: inline-block;
         border-radius: $border-radius;
+        transition: all .5s ease;
 
         &.tile-4 {
             background-color: $tile-4-color;
@@ -78,78 +79,6 @@
 
         &.tile-super {
             background-color: $tile-super-color;
-        }
-    }
-
-    .row-1 {
-        &.column-1 {
-            transform: translate(0, 0);
-        }
-
-        &.column-2 {
-            transform: translate($column-2-left, 0);
-        }
-
-        &.column-3 {
-            transform: translate($column-3-left, 0);
-        }
-
-        &.column-4 {
-            transform: translate($column-4-left, 0);
-        }
-    }
-
-    .row-2 {
-        &.column-1 {
-            transform: translate(0, $row-2-top);
-        }
-
-        &.column-2 {
-            transform: translate($column-2-left, $row-2-top);
-        }
-
-        &.column-3 {
-            transform: translate($column-3-left, $row-2-top);
-        }
-
-        &.column-4 {
-            transform: translate($column-4-left, $row-2-top);
-        }
-    }
-
-    .row-3 {
-        &.column-1 {
-            transform: translate(0, $row-3-top);
-        }
-
-        &.column-2 {
-            transform: translate($column-2-left, $row-3-top);
-        }
-
-        &.column-3 {
-            transform: translate($column-3-left, $row-3-top);
-        }
-
-        &.column-4 {
-            transform: translate($column-4-left, $row-3-top);
-        }
-    }
-
-    .row-4 {
-        &.column-1 {
-            transform: translate(0, $row-4-top);
-        }
-
-        &.column-2 {
-            transform: translate($column-2-left, $row-4-top);
-        }
-
-        &.column-3 {
-            transform: translate($column-3-left, $row-4-top);
-        }
-
-        &.column-4 {
-            transform: translate($column-4-left, $row-4-top);
         }
     }
 }
