fix all imports

--- a/games/2048/components/Board/styles.scss
+++ b/games/2048/components/Board/styles.scss
@@ -1,5 +1,5 @@
-@import "../../styles/common/colors";
-@import "../../styles/common/variables";
+@import "../App/styles/colors";
+@import "../App/styles/variables";
 
 #board-container {
   background-color: $brand-color;
