--- a/games/2048/components/GameContainer/styles.scss
+++ b/games/2048/components/GameContainer/styles.scss
@@ -1,5 +1,5 @@
-@import "../common/colors";
-@import "../common/variables";
+@import "../App/styles/colors";
+@import "../App/styles/variables";
 
 #game-container {
   color: $brand-color;
