remove all connect

--- a/games/2048/components/Tiles/styles.scss
+++ b/games/2048/components/Tiles/styles.scss
@@ -1,7 +1,7 @@
 @import "../App/styles/colors";
 @import "../App/styles/variables";
 
-#tiles {
+.tiles {
   .tile {
     position: absolute;
     font-size: $tile-font-size;
