move scores into players

--- a/games/2048/components/App/styles.scss
+++ b/games/2048/components/App/styles.scss
@@ -1,2 +1,12 @@
 @import "./styles/reset";
 @import "./styles/elements";
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+}
