--- a/games/2048/components/Players/styles.scss
+++ b/games/2048/components/Players/styles.scss
@@ -1,8 +1,9 @@
 @import "../App/styles/variables";
 
-.bots {
+.players {
   display: flex;
   flex-direction: row;
   gap: $gutter-size;
   margin: $gutter-size 0;
+  justify-content: flex-end;
 }
